--- a/style/style-header.css
+++ b/style/style-header.css
@@ -16,35 +16,36 @@ header h1{
     font-size: 2.5em;
     margin-right: 0.5em;
 }
-ul{
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-}
-li{
+.topnav {
+    overflow: hidden;
+    opacity: 100%;
+  }
+  
+  .topnav a {
     float: left;
-    padding: 1em 1.5em;
-    background-color: royalblue;
-    transition: all 0.3s;
-    
-}
-li:hover{
-    background-color: #f2d351;
-}
-
-a{
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 1rem 2.5rem;
     text-decoration: none;
-    color: white;
+    font-size: 17px;
     font-weight: 600;
     font-family: Arial, Helvetica, sans-serif;
-}
-li.active{
+  }
+  
+  .topnav a:hover {
     background-color: #f2d351;
-
-}
-li.active > a{
+    color: black;
+  }
+  
+  .topnav a.active {
+    background-color: #f2d351;
     color: royalblue;
-}
+  }
+  
+  .topnav .icon {
+    display: none;
+  }
 .container-1{
     background-image: linear-gradient(royalblue, skyblue);
     min-height: 85vh;
@@ -53,14 +54,28 @@ img{
     box-shadow: 0px 0px 50px 10px rgba(255,255,255,1);
 }
 
-@media  screen and (max-width:425px){
-    header h1{
-        text-align: center;
-    }
-    li{
-        padding: 0.5rem;
-    }
-    a{
-        font-weight: normal;
-    }
-}
+
+    @media screen and (max-width: 600px) {
+        .topnav a:not(:first-child) {display: none;}
+        .topnav a.icon {
+          float: right;
+          display: block;
+        }
+      }
+      
+      @media screen and (max-width: 600px) {
+        .topnav.responsive {position: relative;}
+        .topnav.responsive .icon {
+          position: absolute;
+          right: 0;
+          top: 0;
+        }
+        .topnav.responsive a {
+          float: none;
+          display: block;
+          text-align: left;
+        }
+        img{
+            width: 20rem;
+        }
+      }
